--- a/pairprogrammingbotreplica/views/continue.erb
+++ b/pairprogrammingbotreplica/views/continue.erb
@@ -1,2 +1,5 @@
-<%= @question %>
-<li><a class = "continue" href=<%= @continue_href %>>Continue</a></li>
+<div class="question"> <%= @question %> </div>
+<br>
+<br>
+<br>
+<li><a class = "continue btn btn-info" href=<%= @continue_href %>>Continue</a></li>
