--- a/pairprogrammingbotreplica/views/done.erb
+++ b/pairprogrammingbotreplica/views/done.erb
@@ -1,5 +1,8 @@
-<%= @question %>
-<li><a class = "done" href=<%= @done_href %>>Done</a></li>
+<div class="question"> <%= @question %> </div>
+<br>
+<br>
+<br>
+<li><a class = "done btn btn-success" href=<%= @done_href %>>Done</a></li>
 
 
 
