--- a/pairprogrammingbotreplica/views/yesno.erb
+++ b/pairprogrammingbotreplica/views/yesno.erb
@@ -1,3 +1,5 @@
-<%= @question %>
-<li><a class = "yes" href=<%= @yes_href %>>Yes</a></li>
-<li><a class = "no" href=<%= @no_href %>>No</a></li>
+<div class="question"> <%= @question %> </div>
+<br>
+<br>
+<br>
+<li><a class = "yes btn btn-primary" href=<%= @yes_href %>>Yes</a><a class = "no btn btn-danger" href=<%= @no_href %>>No</a></li>
