--- a/sinatra-store/views/layout.erb
+++ b/sinatra-store/views/layout.erb
@@ -7,9 +7,11 @@
   <body>
     <div class="container">
       <div class="row">
+        <div class="span12">
         <ul>
         <%= yield %>
-        </ul> 
+        </ul>
+        </div> 
       </div>
     </div>    
   </body>
