--- a/sinatra-store/views/show_products.erb
+++ b/sinatra-store/views/show_products.erb
@@ -1,21 +1,24 @@
 
-<table>
+<table class="table">
+ 
   <tr>
     <th>Product Name</th>
     <th>Sale Item</th>
   </tr>
   <% @rs.each do |row| %>
+  <tbody>
   <tr>
     <td><%= row['name'] %></td>
     <td>
         <% if row["on_sale"]== 't'%>
-          <img src="http://matchconsultingblog.files.wordpress.com/2012/06/sale-tag.jpg">
+          <img src="http://matchconsultingblog.files.wordpress.com/2012/06/sale-tag.jpg" width="50" height="50">
         <% end %>
     </td>
   </tr>
   <% end %>
+  </tbody>
 </table>
 
 
 
-<a class = "back" href="/">Back</a></li>
+<a class = "back btn" href="/">Back</a></li>
