--- a/sinatra-store/views/show_users.erb
+++ b/sinatra-store/views/show_users.erb
@@ -1,17 +1,21 @@
 
-<table>
+<table class="table">
   <tr>
-    <th>Id</th>
+    <th>ID</th>
     <th>Name</th>
   </tr>
+  
   <% @rs.each do |row| %>
+  <tbody>
   <tr>
     <td><%= row['id'] %></td>
     <td><%= row['name'] %></td>
   </tr>
   <% end %>
+  </tbody>
 </table>
 
-<a class = "back" href="/">Back</a></li>
+
+<a class = "back btn" href="/">Back</a></li>
 
 
