--- a/sinatra-store/views/home.erb
+++ b/sinatra-store/views/home.erb
@@ -1,1 +1,1 @@
-<li><a class = "users btn bt-info" href="/users">Users</a> <a class = "products btn bt-info" href="/products">Products</a></li>
+<li><a class = "users btn bt-info" href="/users">Users</a> <a class = "products btn bt-info" href="/products">Products</a>  <a class = "new-product btn bt-info" href="/new-product">Add New Product</a></li>
