--- a/sinatra-store/views/new_product.erb
+++ b/sinatra-store/views/new_product.erb
@@ -1,6 +1,6 @@
 <h1>New Product</h1>
 
-<form action="/new-product" method="post">
+<form action="/product/new" method="post">
   <label for="product_name">Product Name</label>
   <input type="text" name="product_name">
   <label for="product_price">Product Price</label>
