--- a/sinatra-store/views/home.erb
+++ b/sinatra-store/views/home.erb
@@ -1,3 +1,12 @@
-<li><a class = "users btn bt-info" href="/users">Users</a> <a class = "products btn bt-info" href="/products">Products</a>  <a class = "newproduct btn bt-info" href="/product/new">Add New Product</a></li>
+<div class="row">
+  <div class="span5">
+    <a class = "users btn bt-info" href="/users">Users</a>
+    <a class = "products btn bt-info" href="/products">Products</a>
+    <a class = "newproduct btn bt-info" href="/product/new">Add New Product</a></li>
+  </div>
+  <div class="span7">
+          
+  </div>
+</div>
 
 
