--- a/sinatra-store/views/layout.erb
+++ b/sinatra-store/views/layout.erb
@@ -3,15 +3,12 @@
   <head>
     <link rel="stylesheet" type="text/css" href="/style.css">
     <link rel="stylesheet" type="text/css" href="/bootstrap.css">
+    <title>e-commerce Platform</title>
   </head>
   <body>
     <div class="container">
       <div class="row">
-        <div class="span12">
-        <ul>
         <%= yield %>
-        </ul>
-        </div> 
       </div>
     </div>    
   </body>
