--- a/sinatra-store/views/success.erb
+++ b/sinatra-store/views/success.erb
@@ -1,9 +1,9 @@
-<h1>Success!</h1>
-
-<p></p>
-  The product <%= @name %> has been created/updated/deleted!
-<p></p>
-<a href="/product/new">Create New Product</a>
-
-<p></p>
-<a href="/">Go Home</a>
+<div class="span12">
+  <ul>
+    <h1>Success!</h1>
+    <p>The changes have been complteted</p>
+    <a class="btn btn-primary" href="/product/new">Create New Product</a>
+    <p></p>
+    <a class="btn btn-primary" href="/">Go Home</a>
+  </ul>
+</div>
