--- a/sinatra-store/views/delete_product.erb
+++ b/sinatra-store/views/delete_product.erb
@@ -1,5 +1,8 @@
-<h1>Delete Product</h1>
-
-<form action="/products/<%= @id %>/delete" method="post">
-  <button class = "back btn">Delete it!</button>
-</form>
+<div class="span12">
+  <ul>
+    <h1>Delete Product</h1>
+    <form action="/products/<%= @id %>/delete" method="post">
+      <button class = "back btn btn-danger">Delete it!</button>
+    </form>
+  </ul>
+</div>
