--- a/sinatra-store/views/new_product.erb
+++ b/sinatra-store/views/new_product.erb
@@ -1,11 +1,14 @@
-<h1>New Product</h1>
-
-<form action="/product/new" method="post">
-  <label for="product_name">Product Name</label>
-  <input type="text" name="product_name">
-  <label for="product_price">Product Price</label>
-  <input type="text" name="product_price">
-  <p>
-  <button class = "back btn">Save it!</button>
-</form>
+<div class="span12">
+  <ul>
+    <h1>New Product</h1>
+    <form action="/product/new" method="post">
+      <label for="product_name">Product Name</label>
+      <input type="text" name="product_name">
+      <label for="product_price">Product Price</label>
+      <input type="text" name="product_price">
+      <p>
+      <button class = "back btn">Save it!</button>
+    </form>
+  </ul>
+</div>
 
