--- a/sinatra-store/views/productsdetails.erb
+++ b/sinatra-store/views/productsdetails.erb
@@ -1,28 +1,31 @@
-<table class="table">
-  <tr>
-    <th>ID</th>
-    <th>Name</th>
-    <th>Price</th>
-    <th>Sale Item</th>
-  </tr>
-  
-  <% @rs.each do |row| %>
-  <tbody>
-  <tr>
-    <td><%= row['id'] %></td>
-    <td><%= row['name'] %></td>
-    <td>$<%= row['price'] %></td>
-    <td>
-        <% if row["on_sale"]== 't'%>
-          <img src="http://matchconsultingblog.files.wordpress.com/2012/06/sale-tag.jpg" width="50" height="50">
-        <% end %>
-    </td>
-  </tr>
-  </tbody>
-</table>
-
-<li><a class = "back btn" href="/products/<%= @id %>/show_form">Update Item</a></li>
-<li><a class = "back btn" href="/products/<%= @id %>/delete">Delete Item</a></li>
-<li><a class = "back btn" href="/">Back</a></li>
-
-<% end %>
+<div class="span12">
+  <ul>
+    <table class="table">
+      <tr>
+        <th>ID</th>
+        <th>Name</th>
+        <th>Price</th>
+        <th>Sale Item</th>
+      </tr>
+      <% @rs.each do |row| %>
+      <tbody>
+      <tr>
+          <td><%= row['id'] %></td>
+          <td><%= row['name'] %></td>
+          <td>$<%= row['price'] %></td>
+          <td>
+            <% if row["on_sale"]== 't'%>
+            <img src="http://matchconsultingblog.files.wordpress.com/2012/06/sale-tag.jpg" width="50" height="50">
+            <% end %>
+          </td>
+      </tr>
+      </tbody>
+    </table>
+      <li><a class = "back btn btn-primary" href="/products/<%= @id %>/show_form">Update Item</a></li>
+      <p></p>
+      <li><a class = "back btn btn-danger" href="/products/<%= @id %>/delete">Delete Item</a></li>
+      <p></p>
+      <li><a class = "back btn" href="/">Back</a></li>
+      <% end %>
+  </ul>
+</div>
