--- a/sinatra-store/views/show_products.erb
+++ b/sinatra-store/views/show_products.erb
@@ -1,6 +1,5 @@
-
-<table class="table">
- 
+<div class="span12">
+  <table class="table">
   <tr>
     <th>Product Name</th>
     <th>Price</th>
@@ -19,8 +18,6 @@
   </tr>
   <% end %>
   </tbody>
-</table>
-
-
-
-<a class = "back btn" href="/">Back</a></li>
+  </table>
+  <a class = "back btn" href="/">Back</a></li>
+</div>
