--- a/sinatra-store/views/update_product.erb
+++ b/sinatra-store/views/update_product.erb
@@ -1,10 +1,13 @@
-<h1>Update Product</h1>
-
-<form action="/products/<%= @id %>/show_form" method="post">
-  <label for="product_name">Product Name</label>
-  <input type="text" name="product_name">
-  <label for="product_price">Product Price</label>
-  <input type="text" name="product_price">
-  <p>
-  <button class = "back btn">Update it!</button>
-</form>
+<div class="span12">
+  <ul>
+    <h1>Update Product</h1>
+    <form action="/products/<%= @id %>/show_form" method="post">
+      <label for="product_name">Product Name</label>
+      <input type="text" name="product_name">
+      <label for="product_price">Product Price</label>
+      <input type="text" name="product_price">
+      <p>
+      <button class = "back btn">Update it!</button>
+    </form>
+  </ul>
+</div>
