--- a/sinatra-store/views/show_users.erb
+++ b/sinatra-store/views/show_users.erb
@@ -13,7 +13,7 @@
     <% end %>
     </tbody>
   </table>
-  <a class = "back btn" href="/">Back</a></li>
+  <a class = "back btn" href="/">Home</a></li>
 </div>
 
 
