--- a/sinatra-store/views/update_product.erb
+++ b/sinatra-store/views/update_product.erb
@@ -6,8 +6,10 @@
       <input type="text" name="product_name">
       <label for="product_price">Product Price</label>
       <input type="text" name="product_price">
-      <p>
-      <button class = "back btn">Update it!</button>
+      <p></p>
+      <input type="checkbox" class="checkbox" name="on_sale" value="t">Sale Item
+      <p></p>
+      <button class = "back btn">Update</button>
     </form>
   </ul>
 </div>
