--- a/sinatra-store/public/style.css
+++ b/sinatra-store/public/style.css
@@ -1,10 +1,12 @@
-ul {
+.home {
   list-style: none;
   text-align: center;
-  margin: auto;
+  margin-top: 100px;
+  margin-right: 75px;
+  margin-left: 75px;
 }
 
-.users {
+/*.users {
   margin-top: 80px;
 }
 
@@ -16,16 +18,62 @@ ul {
 
 .newproduct {
   margin-top: 80px;
+}*/
+
+li {
+  list-style: none;
 }
 
 tbody:nth-child(even) {
   background-color: #C0C0C0;
 }
 
-
 body {
-  background-image: url("/panda1.jpg");
+  background-image: url("https://lh4.googleusercontent.com/-_loai1Qr6Yk/UV5fSU6QIjI/AAAAAAAAAOs/bpZBGjaqzcs/s860/bamboo+1920x1200-6.jpg");
   background-size: cover;
   background-repeat: repeat;
   height: 100%;
+}
+
+table {
+  text-align: center;
+  color: white;
+}
+
+  .product_links {
+    color: white;
+}
+
+h1 {
+  color: white;
+  font-family: 'Nunito', sans-serif;
+}
+
+.complete {
+  color: white;
+  font-family: 'Nunito', sans-serif;
+  font-size: 25px;
+}
+
+form {
+  color: white;
+  font-family: 'Nunito', sans-serif;
+}
+
+a {
+color: white;
+text-decoration: none;
+}
+
+.panda {
+  margin-top: 20px;
+  border: 6px solid white;
+  border-radius: 3px
+}
+
+.store_name {
+  margin-top: 40px;
+  text-align: center;
+  color: white;
+  font-family: 'Nunito', sans-serif;
 }
