--- a/sinatra-store/views/delete_product.erb
+++ b/sinatra-store/views/delete_product.erb
@@ -1,8 +1,11 @@
 <div class="span12">
   <ul>
-    <h1>Delete Product</h1>
+    <h1>Are you sure?</h1>
     <form action="/products/<%= @id %>/delete" method="post">
-      <button class = "back btn btn-danger">Delete it!</button>
+      <button class = "back btn btn-danger">Yes</button>      
     </form>
+    <a class = "back btn" href="/">Home</a></li>
   </ul>
 </div>
+
+
