--- a/sinatra-store/views/home.erb
+++ b/sinatra-store/views/home.erb
@@ -1,11 +1,16 @@
 <div class="row">
   <div class="span5">
-    <a class = "users btn bt-info" href="/users">Users</a>
-    <a class = "products btn bt-info" href="/products">Products</a>
-    <a class = "newproduct btn bt-info" href="/product/new">Add New Product</a></li>
+    <div class="home">
+    <ul class="nav nav-tabs nav-stacked">
+      <li><a class = "users btn bt-info" href="/users">Users</a></li>
+      <li><a class = "products btn bt-info" href="/products">Products</a></li>
+      <!-- <li><a class = "newproduct btn bt-info" href="/product/new">Add New Product</a></li> -->
+    </ul>
+    </div>
   </div>
   <div class="span7">
-          
+    <h1 class="store_name">Panda Outpost</h1>
+    <img class= "panda" src="https://lh4.googleusercontent.com/-foioFMdHQbw/UV54jVq2BQI/AAAAAAAAAO8/yBui8L14zKQ/s860/399618_406232742765079_434225307_n.jpg">      
   </div>
 </div>
 
