--- a/sinatra-store/views/layout.erb
+++ b/sinatra-store/views/layout.erb
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="/style.css">
     <link rel="stylesheet" type="text/css" href="/bootstrap.css">
-    <title>e-commerce Platform</title>
+    <link rel="stylesheet" type="text/css" href="/style.css">
+    <link href='http://fonts.googleapis.com/css?family=Nunito' rel='stylesheet' type='text/css'>
+    <title>Panda Outpost</title>
   </head>
   <body>
     <div class="container">
