--- a/sinatra-store/views/success.erb
+++ b/sinatra-store/views/success.erb
@@ -1,9 +1,9 @@
 <div class="span12">
   <ul>
     <h1>Success!</h1>
-    <p>The changes have been complteted</p>
-    <a class="btn btn-primary" href="/product/new">Create New Product</a>
+    <p class="complete">The changes have been completed</p>
+    <a class="back btn" href="/product/new">New Product</a>
     <p></p>
-    <a class="btn btn-primary" href="/">Go Home</a>
+    <a class="back btn" href="/">Home</a>
   </ul>
 </div>
