--- a/sinatra-store/views/productsdetails.erb
+++ b/sinatra-store/views/productsdetails.erb
@@ -18,6 +18,7 @@
             <img src="http://www.techscreens.com/wp-content/themes/blognews/images/sale.png">
             <% end %>
           </td>
+          <td><%= @q %>google api stuff</td>
       </tr>
       </tbody>
     </table>
